fix font size on mobile

--- a/src/scss/_typo.scss
+++ b/src/scss/_typo.scss
@@ -12,7 +12,7 @@ $typi: (
   // Other font maps here
   // base font-map,
   h1special: (
-    null: (27px, 1.3),
+    null: (28px, 1.3),
     phone: (35px, 1.3),
     tablet-small: (48px, 1.2),
     tablet-wide: (48px, 1.2),
